# serializer version: 1
# name: TestPageParamsSnapshots.test_custom_params_snapshot
  dict({
    'limit': 25,
    'offset': 100,
    'page': 5,
  })
# ---
# name: TestPageParamsSnapshots.test_default_params_snapshot
  dict({
    'limit': 20,
    'offset': 0,
    'page': 1,
  })
# ---
# name: TestPageParamsSnapshots.test_large_page_params_snapshot
  dict({
    'limit': 100,
    'offset': 99900,
    'page': 1000,
  })
# ---
# name: TestPageSnapshots.test_empty_page_snapshot
  dict({
    'has_next': False,
    'has_previous': False,
    'items': list([
    ]),
    'limit': 10,
    'page': 1,
    'pages': 0,
    'total': 0,
  })
# ---
# name: TestPageSnapshots.test_first_page_snapshot
  dict({
    'has_next': True,
    'has_previous': False,
    'items': list([
      1,
      2,
      3,
      4,
      5,
    ]),
    'limit': 5,
    'page': 1,
    'pages': 10,
    'total': 50,
  })
# ---
# name: TestPageSnapshots.test_last_page_snapshot
  dict({
    'has_next': False,
    'has_previous': True,
    'items': list([
      46,
      47,
      48,
      49,
      50,
    ]),
    'limit': 5,
    'page': 10,
    'pages': 10,
    'total': 50,
  })
# ---
# name: TestPageSnapshots.test_middle_page_snapshot
  dict({
    'has_next': True,
    'has_previous': True,
    'items': list([
      21,
      22,
      23,
      24,
      25,
    ]),
    'limit': 5,
    'page': 5,
    'pages': 10,
    'total': 50,
  })
# ---
# name: TestPageSnapshots.test_page_with_dict_items_snapshot
  dict({
    'has_next': True,
    'has_previous': False,
    'items': list([
      dict({
        'id': 1,
        'name': 'Alice',
      }),
      dict({
        'id': 2,
        'name': 'Bob',
      }),
      dict({
        'id': 3,
        'name': 'Charlie',
      }),
    ]),
    'limit': 10,
    'page': 1,
    'pages': 10,
    'total': 100,
  })
# ---
